# target-object-localization

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/: training.py
src/common/: VOCclassifier.py  binary_classifier.py  binary_classifier_inference.py  dataset.ipynb  object_localizer.py  selectivesearch.py  train_classifier.py  utils.py  voc_dataset.py
