[project]
name = "target-object-localization"
version = "0.1.0"
description = ""
authors = [
    {name = "clay-arras",email = "astrollin.neil@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "torchaudio (>=2.6.0,<3.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# [[tool.poetry.source]]
# name = "pytorch-gpu"
# url = "https://download.pytorch.org/whl/cu126"
# priority = "explicit"

# [tool.poetry.dependencies]
# torch = {source = "pytorch-gpu"}
# torchvision = {source = "pytorch-gpu"}
# torchaudio = {source = "pytorch-gpu"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
ruff = "^0.11.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"

[tool.poetry]
package-mode = false

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
explicit_package_bases = true
namespace_packages = true
