[project]
name = "target-object-localization"
version = "0.1.0"
description = ""
authors = [
    {name = "vnguyen243", email = "vnguyen243.work@gmail.com"},
    {name = "clay-arras",email = "astrollin.neil@gmail.com"},
    {name = "tyra-cheng",email = "tyracheng0723@gmail.com"},
    { name = "ericlyfan", email = "ericlyfan@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch>=2.2.0,<2.3",
    "torchvision>=0.17.0,<0.18",
    "torchaudio>=2.2.0,<2.3",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# [[tool.poetry.source]]
# name = "pytorch-gpu"
# url = "https://download.pytorch.org/whl/cu126"
# priority = "explicit"

# [tool.poetry.dependencies]
# torch = {source = "pytorch-gpu"}
# torchvision = {source = "pytorch-gpu"}
# torchaudio = {source = "pytorch-gpu"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
ruff = "^0.11.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"

[tool.poetry]
package-mode = false

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
explicit_package_bases = true
namespace_packages = true
